tests/NormalTests/paczka1/fuzzy1/52989603.err
Error in line 14: wNxhWag A300 25,8
Error in line 30: qsqoshI A642 9,1
Error in line 34: 829Y A6F2 1,5
Error in line 29: wNxhWag A642 201,7
Error in line 28: pqPldDgkmwK A824 63,4
